--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
     "coffee-loader": "^0.7.2",
+    "css-loader": "^0.23.1",
     "electron-builder": "^2.9.1",
     "electron-packager": "^5.2.1",
     "electron-prebuilt": "^0.36.10",
     "html-webpack-plugin": "^2.9.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
@@ -30,6 +32,7 @@
     "electron-default-menu": "^0.1.1",
     "menu": "^0.2.5",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
     "timbre": "^14.11.25"
