--- a/package.json
+++ b/package.json
@@ -16,13 +16,24 @@
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
+    "browserify": "^13.0.0",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.23.1",
     "electron-builder": "^2.9.1",
     "electron-packager": "^5.2.1",
     "electron-prebuilt": "^0.36.10",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-html-replace": "^1.5.5",
+    "gulp-react": "^3.1.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.5.3",
     "html-webpack-plugin": "^2.9.0",
+    "jetpack": "0.0.1",
+    "reactify": "^1.1.1",
     "style-loader": "^0.13.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
